--- a/elastic-search/pom.xml
+++ b/elastic-search/pom.xml
@@ -3,4 +3,32 @@
   <groupId>com.ayush.app</groupId>
   <artifactId>elastic-search</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <parent>
+  	<groupId>org.springframework.boot</groupId>
+  	<artifactId>spring-boot-starter-parent</artifactId>
+  	<version>2.3.1.RELEASE</version>
+  	<relativePath/>
+  </parent>
+  
+  <properties>
+  	<java.version>1.8</java.version>
+  </properties>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter</artifactId>
+  	</dependency>
+  </dependencies>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-maven-plugin</artifactId>
+  		</plugin>
+  	</plugins>
+  </build>
+  <packaging>pom</packaging>
 </project>
