--- a/elastic-search/pom.xml
+++ b/elastic-search/pom.xml
@@ -3,6 +3,7 @@
   <groupId>com.ayush.app</groupId>
   <artifactId>elastic-search</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   
   <parent>
   	<groupId>org.springframework.boot</groupId>
@@ -20,6 +21,10 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.elasticsearch.client</groupId>
+  		<artifactId>elasticsearch-rest-client</artifactId>
+  	</dependency>
   </dependencies>
   
   <build>
@@ -28,7 +33,13 @@
   			<groupId>org.springframework.boot</groupId>
   			<artifactId>spring-boot-maven-plugin</artifactId>
   		</plugin>
+  		<plugin>    
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <configuration>
+	            <source>${java.version}</source>
+	            <target>${java.version}</target>
+	        </configuration>
+	    </plugin>
   	</plugins>
   </build>
-  <packaging>pom</packaging>
 </project>
